Scoreboard added. Title added.

--- a/TicTacToe-JS/index.html
+++ b/TicTacToe-JS/index.html
@@ -9,6 +9,13 @@
   <title>Tic Tac Toe</title>
 </head>
 <body>
+	<div class="header group">
+		<h1>Tic-Tac-Toe</h1>
+	</div>
+	<div id="scoreboard">
+		<div class="wins group">X: <span id="x-wins"></span> </div>
+		<div class="wins group">O: <span id="o-wins"></span></div>
+	</div>
 	<div class="game">
 	  <div class="row group">
 	    <div class="cell" id="0,0"></div>
